[project]
name = "pre-process-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "label-studio>=1.16.0",
    "paddleclas>=2.5.2",
    "paddleocr>=2.9.1",
    "paddlepaddle>=2.6.2",
    "pymupdf>=1.25.3",
    "setuptools>=75.8.0",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]
